--- a/src/dserfozo-rpcbindings/package.json
+++ b/src/dserfozo-rpcbindings/package.json
@@ -1,11 +1,15 @@
 {
   "name": "dserfozo-rpcbindings",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "description": "dserfozo-rpcbindings",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "author": {
     "name": "arsher"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/arsher/RpcBindings"    
   },
   "scripts": {
     "test": "jest",
