--- a/src/dserfozo-rpcbindings/package.json
+++ b/src/dserfozo-rpcbindings/package.json
@@ -8,12 +8,12 @@
     "name": "arsher"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/arsher/RpcBindings"    
+    "type": "git",
+    "url": "https://github.com/arsher/RpcBindings"
   },
   "scripts": {
     "test": "jest",
-    "build": "webpack || echo not ok",
+    "build": "webpack",
     "release": "standard-version && npm pack"
   },
   "devDependencies": {
@@ -32,8 +32,13 @@
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
     "mapCoverage": true,
-    "collectCoverageFrom": [ "src/**/*.ts" ],
-    "coveragePathIgnorePatterns": [ "/__tests__/", "/node_modules/" ],
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/__tests__/",
+      "/node_modules/"
+    ],
     "testEnvironment": "node",
     "testRegex": "__tests__/.*\\.spec\\.ts$",
     "moduleFileExtensions": [
