--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,25 +6,8 @@ environment:
   nodejs_version: 8
 install:
 - ps: Install-Product node $env:nodejs_version
-- git submodule update --init --recursive
-- cmd: >-
-    cd src\dserfozo-rpcbindings
-
-    npm install
-
-    npm run build
-
-    cd ..\..
-
-
-    cd tests\DSerfozo.RpcBindings.Node.IntegrationTests
-
-    npm install
-
-    cd ..\..
-
-
-    dotnet restore
+- cmd: git submodule update --init --recursive
+- cmd: dotnet restore
 build:
   project: DSerfozo.RpcBindings.sln
   verbosity: minimal
