--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,11 +6,28 @@ environment:
   nodejs_version: 8
 install:
 - ps: Install-Product node $env:nodejs_version
-- cmd: git submodule update --init --recursive
-- cmd: dotnet restore
+- git submodule update --init --recursive
+- cmd: >-
+    cd src\dserfozo-rpcbindings
+
+    npm install
+
+    npm run build
+
+    cd ..\..
+
+
+    cd tests\DSerfozo.RpcBindings.Node.IntegrationTests
+
+    npm install
+
+    cd ..\..
+
+
+    dotnet restore
 build:
   project: DSerfozo.RpcBindings.sln
-  verbosity: normal
+  verbosity: minimal
 test_script:
 - cmd: 'cd src\dserfozo-rpcbindings && npm run test'
 - cmd: '%xunit20%\xunit.console.x86 tests\DSerfozo.RpcBindings.Tests\bin\Release\net461\DSerfozo.RpcBindings.Tests.dll'  
