--- a/src/dserfozo-rpcbindings/package.json
+++ b/src/dserfozo-rpcbindings/package.json
@@ -7,6 +7,7 @@
   "author": {
     "name": "arsher"
   },
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/arsher/RpcBindings"
