--- a/src/dserfozo-rpcbindings/package.json
+++ b/src/dserfozo-rpcbindings/package.json
@@ -15,12 +15,13 @@
   "scripts": {
     "test": "jest",
     "build": "webpack",
-    "set-buildnum": "set VERSION=node -p -e \"require('./package.json').version\" && npm version \"%VERSION%-pre.%APPVEYOR_BUILD_NUMBER%\"",
+    "set-buildnum": "node version.js",
     "release": "standard-version && npm pack"
   },
   "devDependencies": {
     "@types/jest": "^22.1.0",
     "@types/node": "^6.0.96",
+    "edit-json-file": "^1.0.8",
     "jest": "^22.1.4",
     "standard-version": "^4.3.0",
     "ts-jest": "^22.0.1",
