--- a/src/dserfozo-rpcbindings/package.json
+++ b/src/dserfozo-rpcbindings/package.json
@@ -26,6 +26,7 @@
     "standard-version": "^4.3.0",
     "ts-jest": "^22.0.1",
     "ts-loader": "^3.3.1",
+    "tslint": "^5.9.1",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "webpack-node-externals": "^1.6.0"
