Added basic cefglue support

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,6 +40,7 @@ test_script:
 artifacts:
 - path: src\DSerfozo.RpcBindings\bin\Release\DSerfozo.RpcBindings*.nupkg
 - path: src\DSerfozo.RpcBindings.Json\bin\Release\DSerfozo.RpcBindings.Json*.nupkg
+- path: src\DSerfozo.RpcBindings.CefGlue\bin\Release\DSerfozo.RpcBindings.CefGlue*.nupkg
 - path: src\dserfozo-rpcbindings\dserfozo-rpcbindings-*.tgz
 deploy:
 - provider: NuGet
