--- a/tests/DSerfozo.RpcBindings.Tests/DSerfozo.RpcBindings.Tests.csproj
+++ b/tests/DSerfozo.RpcBindings.Tests/DSerfozo.RpcBindings.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Microsoft.Reactive.Testing" Version="4.0.0-preview00001" />
     <PackageReference Include="Moq" Version="4.8.1" />
     <PackageReference Include="System.Reactive" Version="4.0.0-preview00001" />
     <PackageReference Include="xunit" Version="2.3.1" />
