Added more filtering for method and property analyzers

--- a/src/DSerfozo.RpcBindings/DSerfozo.RpcBindings.csproj
+++ b/src/DSerfozo.RpcBindings/DSerfozo.RpcBindings.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Analyze\TypeFilter.cs" />
+    <Compile Remove="Contract\Analyze\ITypeFilter.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Reactive" Version="4.0.0-preview00001" />
   </ItemGroup>
 
