--- a/src/DSerfozo.RpcBindings.CefGlue/DSerfozo.RpcBindings.CefGlue.csproj
+++ b/src/DSerfozo.RpcBindings.CefGlue/DSerfozo.RpcBindings.CefGlue.csproj
@@ -16,6 +16,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Common\Serialization\ComplexObjectSerializer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Renderer\Javascript\extension.js" />
   </ItemGroup>
 
