--- a/tests/DSerfozo.RpcBindings.Tests/DSerfozo.RpcBindings.Tests.csproj
+++ b/tests/DSerfozo.RpcBindings.Tests/DSerfozo.RpcBindings.Tests.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Analyze\MethodAnalyzerTypeFilterTests.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="Microsoft.Reactive.Testing" Version="4.0.0-preview00001" />
     <PackageReference Include="Moq" Version="4.8.1" />
