reworked cefglue serialization

--- a/src/DSerfozo.RpcBindings.CefGlue/DSerfozo.RpcBindings.CefGlue.csproj
+++ b/src/DSerfozo.RpcBindings.CefGlue/DSerfozo.RpcBindings.CefGlue.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Compile Remove="Common\Serialization\ComplexObjectSerializer.cs" />
+    <Compile Remove="Common\Serialization\RpcMessageSerializer.cs" />
   </ItemGroup>
 
   <ItemGroup>
