--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/src/dserfozo-rpcbindings/.vscode
+/src/dserfozo-rpcbindings/dserfozo-rpcbindings-0.0.2.tgz
