--- a/src/DSerfozo.RpcBindings/DSerfozo.RpcBindings.csproj
+++ b/src/DSerfozo.RpcBindings/DSerfozo.RpcBindings.csproj
@@ -13,7 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Reactive" Version="4.0.0-preview00001" />
+    <PackageReference Include="System.Reactive" Version="4.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
 </Project>
