--- a/src/version.props
+++ b/src/version.props
@@ -1,12 +1,12 @@
 <Project>
   <PropertyGroup>
-    <Version>0.0.3</Version>
+    <Version>1.0.0.0</Version>
     <PackageVersion>$(Version)</PackageVersion>
     <BuildNumber Condition="'$(BuildNumber)' == ''">0</BuildNumber>
     <VersionSuffix></VersionSuffix>
-    <VersionSuffix Condition="'$(IsRtm)' != 'true' And '$(BuildNumber)' != ''">pre-$(BuildNumber)</VersionSuffix>
+    <VersionSuffix Condition="'$(IsRtm)' != 'true' And '$(BuildNumber)' != ''">CI$(BuildNumber)</VersionSuffix>
     <PackageVersion Condition="'$(VersionSuffix)' != ''">$(Version)-$(VersionSuffix)</PackageVersion>
-    <AssemblyVersion>$(Version).0</AssemblyVersion>
-    <FileVersion>$(Version).0</FileVersion>
+    <AssemblyVersion>$(Version)</AssemblyVersion>
+    <FileVersion>$(Version)</FileVersion>
   </PropertyGroup>
 </Project>
